# spacelift

./: .clinerules  .env.example  .envrc  .gitignore  .prompt.md  Dockerfile  FASTAPI_README.md  README.md  TEMPORAL.md  app.py  docker-compose.yml  fastapi-requirements.txt  notification-policy.example.json  notification-policy.sample.json  pyproject.toml  requirements.txt  test_webhook.py  webhook-error.example  webhook-payload.example
.github/workflows/: build.yml
agent/checkpoints/: index.md
agent/context/: capabilities.md  constraints.md
agent/design/: architecture.md  decisions.md  delieverables.md  overview.md  project-phases.md  tech-stack.md
agent/implementation/: index.md  phase1.md  phase2.md  phase3.md  phase4.md  phase5.md  phase6.md  phase7.md  project-phases.md
agent/instructions/: index.md
agent/instructions/standards/: index.md
agent/standards/: coding.md  documentation.md  index.md
agent/tracking/: checkpoints.md  defects.md
agent/workflow/: analysis.md  implementation.md  verification.md
dynamicconfig/: development-sql.yaml  development.yaml
postman/: Spacelift_Workflow_Collection.json
scripts/: add_dependency_labels.py
src/app/: app.py
src/spacelift/: __init__.py  app.py  main.py  mock_spacelift.py  temporal_worker.py
src/spacelift/activities/: get_dependent_stacks.py
src/spacelift/models/: notification_policy.py
src/spacelift/tests/: test_webhook_workflow.py
src/spacelift/webhook/: app.py
src/temporal/: temporal_test.py  temporal_worker.py  worker.py
tests/: test_app.py  test_integration.py  test_temporal.py
(+15 files in other folders)
