[tool.poetry]
name = "spacelift"
version = "1.1.2"
description = "simple python client for the spacelift.io GraphQL API with webhook and workflow management"
authors = ["Will George <wrgeorge1983@gmail.com>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/wrgeorge1983/spacelift"
repository = "https://github.com/wrgeorge1983/spacelift"
keywords = ["spacelift", "spacelift.io", "api", "graphql", "webhook", "workflow"]
packages = [{include = "spacelift", from = "src"}]


[tool.poetry.dependencies]
python = "^3.11"
gql = {extras = ["requests"], version = "^3.5.0"}
ipython = "^8.31.0"

[tool.poetry.group.fastapi]
optional = true

[tool.poetry.group.fastapi.dependencies]
fastapi = "0.95.0"
uvicorn = "0.21.0"

[tool.poetry.group.temporal]
optional = true

[tool.poetry.group.temporal.dependencies]
temporalio = "1.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
